User can create and subscribe any channel
